# twitter_finetune

./: .gitignore  Modelfile  README.md  config.ini  pyproject.toml  remove_bom.py
data/: dataprep.py  tweets-llama.jsonl  tweets-mistral.jsonl  tweets.csv  tweets.jsonl  tweets_backup.csv  tweets_llama.jsonl
data/tweets-llama/: test.jsonl  train.jsonl  valid.jsonl
data/tweets-mistral/: test.jsonl  train.jsonl  valid.jsonl
src/twitter_finetune/: main.py
src/twitter_finetune.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/twitter_finetune/utils/: dataprep.py  datasplit.py
